# rust-tribool

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  serde.rs
