[package]
name = "tribool"
version = "0.2.0"
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Tribool - Three-valued logic"
documentation = "https://docs.rs/tribool/"
include = ["src/**/*", "Cargo.toml"]
keywords = ["tribool", "logic"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/novacrazy/rust-tribool"

[features]
serde-impl = ["serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }