[package]
name = "tribool"
version = "0.3.0"
authors = ["Aaron Trent <novacrazy@gmail.com>"]
edition = "2021"
description = "Tribool - Three-valued logic"
documentation = "https://docs.rs/tribool/"
include = ["src/**/*", "Cargo.toml"]
keywords = ["tribool", "logic"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/novacrazy/rust-tribool"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }